[CBF-OMS] Transport + nodes + protocol